--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
         <p>
             <a href="mailto:budnadra2020@ukr.net">budnadra2020@ukr.net</a>
         </p>
+            <p>
+                <a href="mailto:budnadra2020@gmail.com">budnadra2020@gmail.com</a>
+            </p>
         <p>
             <a href="tel:+380988888888"> Телефонуйте</a>
         </p>
