--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="main.js">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="adaptive.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Montserrat:ital@1&display=swap"
@@ -135,20 +136,22 @@
                 <a href="mailto:budnadra2020@gmail.com">budnadra2020@gmail.com</a>
             </p>
         <p>
-            <a href="tel:+380988888888"> Телефонуйте</a>
+            <a href="tel:+380978024062"> +38(097)802-40-62</a>
         </p>
 
+        </div>
+        <div class="contactIn" >
+            <b>Наша адреса: </b> с.Пасіки-Зубрицькі, вул. Дорожна 44
         </div>
         <div class="card"> <iframe src= https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1821.693086394277!2d24.08880993886711!3d49.78111763936454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1644813674858!5m2!1suk!2sua" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
         </div>
-        <div class="contactIn" >
-           <b>Наша адреса:</b> с.Пасіки-Зубрицькі, вул. Дорожна 44
-        </div>
+
 
     </div>
     <div class="foot"></div>
 </footer>
-
+<a href="#" class="back_to_top"></a>
+<a href="tel:+380978024062" class="callUs"><img src="img/icons/phone-call.png"></a>
 </body>
 </html>
