--- a/index.html
+++ b/index.html
@@ -40,11 +40,38 @@
     <div class="documents">
         <div class="documentWrite">
                     <h2 id="about">Про нас</h2>
-            <div class="documentWriteAbout">Виробництво склопластикової арматури – один із основних напрямків діяльності підприємства "Буд-Надра".
+            <div class="documentWriteAbout">
+                <p>
+                    Виробництво склопластикової композитної арматури – один із основних напрямків діяльності підприємства "Буд-Надра".
                 Така продукція з'явилася на будівельному ринку понад 10 років і вже встигла набути популярності.
                 Вона може стати чудовою альтернативою металевим виробам.
                 Купити композитну арматуру на вигідних умовах ми пропонуємо дрібним, середнім та великим оптом.
-                Завжди є широкий асортимент продукції, яка відповідає усім вимогам та має сертифікат якості
+                    Завжди є широкий асортимент продукції, яка відповідає усім вимогам та має сертифікат якості
+                </p>
+                <p>
+                    Композитна арматура (неметалева склопластикова) – будівельний матеріал, що має унікальні технічні характеристики.
+                    Така арматура легка, міцна і надійна, має високу корозійну стійкість. Використання композитної склопластикової
+                    арматури збільшує термін придатності конструкцій в 2-3 рази порівняно з використанням металевої арматури, особливо
+                    якщо конструкції перебувають в агресивному середовищі і регулярно руйнуються лугами, солями, кислотами.</p>
+                <p>
+                    Для виготовлення композитної арматури використовують спеціальні композитні матеріали (нитки-волокна). Для просочування цих матеріалів використовують епоксидну смолу, після цього волокна сплітають і ще раз покривають полімером. Потім покриті волокна натягують і на стержень накручують ребристу частину.
+                    Під час виготовлення композитної арматури нитки-волокна перебувають в нагрітому стані, а охолоджуються стержні перед порізкою на необхідну довжину.
+                </p>
+                <p>
+                    Склопластикову арматуру активно використовують українські та закордонні майстри. Особливо популярна така арматура в США, Великобританії, Німеччині, Італії, Швейцарії, Франції, Японії, Канаді, Китаї, Південній Кореї, Польщі, Грузії, Угорщині, Саудівській Аравії, Йорданії та інших.
+                </p>
+                <p>
+                   <b>Переваги склопластикової арматури:</b>
+                        <p> <b> 1.</b>	Міцність і надійність (в 2 рази міцніша за сталеву арматуру; використовується в фундаментах з підвищеним навантаженням).<p/>
+                        <p> <b> 2.</b>	Зручність транспортування(доставляється в бухтах, тому компактна та легка; транспортувати можна легковим автомобілем).<p/>
+                        <p> <b> 3.</b>	Зручність монтажу (для монтажу не потрібна спеціальна техніка; бухти дозволяють використовувати таку арматуру без відходів та додаткових зв'язок).<p/>
+                        <p> <b> 4.</b>	Хімічна стійкість (в 10 разів стійкіша, ніж сталь; не іржавіє, не піддається впливу кислот, солей, лугів та інших агресивних речовин).<p/>
+                        <p> <b> 5.</b>	Легкість (в 9 разів легша за звичайну металеву арматуру,її може підняти навіть дитина).<p/>
+                        <p> <b> 6.</b>	Теплопровідність (не проводить холод і не є причиною втрати тепла на відміну від сталі; допоможе зберегти тепло у будинку).<p/>
+                        <p> <b> 7.</b>	Радіопрозорість (не перешкоджає мобільному, стільниковому та gps зв’язку).<p/>
+                        <p> <b> 8.</b>	Магнітоенертність (не змінює характеристик при дії магнітного випромінення).<p/>
+
+                </p>
             </div>
            <div class="documentWriteNum">
                <div> <b>ДСТУ Б В.2.7-312:2016 пп.5.2, 5.3, 6.1.1-6.1.6;</b></div>
@@ -55,60 +82,70 @@
         <div class="table">
             <table>
                 <tr>
-                    <th>Колір</th>
-                    <th>Довжина</th>
-                    <th>Зовнішній діаметр</th>
-                    <th>Внутрішній діаметр</th>
-                    <th>Середня густина, г/см</th>
-                    <th>Вартість, грн</th>
+                    <th>Діаметр</th>
+                    <th>Вартість,грн з ПДВ</th>
+                    <th>Вартість від 5000 м, грн з ПДВ</th>
+                    <th>Вартість від 18000 м, грн з ПДВ</th>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>4мм</td>
+                    <td>4,75</td>
+                    <td>4,40</td>
+                    <td>4,21</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>6мм</td>
+                    <td>8,15</td>
+                    <td>7,60</td>
+                    <td>7,30</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>7мм</td>
+                    <td>12,50</td>
+                    <td>11,60</td>
+                    <td>11,30</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>8мм</td>
+                    <td>17,90</td>
+                    <td>16,80</td>
+                    <td>16,15</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>10мм</td>
+                    <td>23,60</td>
+                    <td>22,25</td>
+                    <td>21,30</td>
                 </tr>
                 <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>12мм</td>
+                    <td>36,90</td>
+                    <td>34,75</td>
+                    <td>35,25</td>
+                </tr>
+                <tr>
+                    <td>14мм</td>
+                    <td>49,90</td>
+                    <td>46,80</td>
+                    <td>44,90</td>
+                </tr>
+                <tr>
+                    <td>16мм</td>
+                    <td>60,85</td>
+                    <td>57,05</td>
+                    <td>54,85</td>
+                </tr>
+                <tr>
+                    <td>18мм</td>
+                    <td>74,25</td>
+                    <td>Договірна</td>
+                    <td>Договірна</td>
+                </tr>
+                <tr>
+                    <td>20мм</td>
+                    <td>95,15</td>
+                    <td>Договірна</td>
+                    <td>Договірна</td>
                 </tr>
             </table>
         </div>
