--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@
                 </p>
                 <p>
                    <b>Переваги склопластикової арматури:</b>
-                        <p> <b> 1.</b>	Міцність і надійність (в 2 рази міцніша за сталеву арматуру; використовується в фундаментах з підвищеним навантаженням).<p/>
-                        <p> <b> 2.</b>	Зручність транспортування(доставляється в бухтах, тому компактна та легка; транспортувати можна легковим автомобілем).<p/>
-                        <p> <b> 3.</b>	Зручність монтажу (для монтажу не потрібна спеціальна техніка; бухти дозволяють використовувати таку арматуру без відходів та додаткових зв'язок).<p/>
-                        <p> <b> 4.</b>	Хімічна стійкість (в 10 разів стійкіша, ніж сталь; не іржавіє, не піддається впливу кислот, солей, лугів та інших агресивних речовин).<p/>
-                        <p> <b> 5.</b>	Легкість (в 9 разів легша за звичайну металеву арматуру,її може підняти навіть дитина).<p/>
-                        <p> <b> 6.</b>	Теплопровідність (не проводить холод і не є причиною втрати тепла на відміну від сталі; допоможе зберегти тепло у будинку).<p/>
-                        <p> <b> 7.</b>	Радіопрозорість (не перешкоджає мобільному, стільниковому та gps зв’язку).<p/>
-                        <p> <b> 8.</b>	Магнітоенертність (не змінює характеристик при дії магнітного випромінення).<p/>
+                        <p> <b> 1.</b>	Міцність і надійність (в 2 рази міцніша за сталеву арматуру; використовується в фундаментах з підвищеним навантаженням).</p>
+                        <p> <b> 2.</b>	Зручність транспортування(доставляється в бухтах, тому компактна та легка; транспортувати можна легковим автомобілем).</p>
+                        <p> <b> 3.</b>	Зручність монтажу (для монтажу не потрібна спеціальна техніка; бухти дозволяють використовувати таку арматуру без відходів та додаткових зв'язок).</p>
+                        <p> <b> 4.</b>	Хімічна стійкість (в 10 разів стійкіша, ніж сталь; не іржавіє, не піддається впливу кислот, солей, лугів та інших агресивних речовин).</p>
+                        <p> <b> 5.</b>	Легкість (в 9 разів легша за звичайну металеву арматуру,її може підняти навіть дитина).</p>
+                        <p> <b> 6.</b>	Теплопровідність (не проводить холод і не є причиною втрати тепла на відміну від сталі; допоможе зберегти тепло у будинку).</p>
+                        <p> <b> 7.</b>	Радіопрозорість (не перешкоджає мобільному, стільниковому та gps зв’язку).</p>
+                        <p> <b> 8.</b>	Магнітоенертність (не змінює характеристик при дії магнітного випромінення).</p>
 
-                </p>
             </div>
            <div class="documentWriteNum">
                <div> <b>ДСТУ Б В.2.7-312:2016 пп.5.2, 5.3, 6.1.1-6.1.6;</b></div>
@@ -189,6 +188,6 @@
     <div class="foot"></div>
 </footer>
 <a href="#" class="back_to_top"></a>
-<a href="tel:+380978024062" class="callUs"><img src="img/icons/phone-call.png"></a>
+<a href="tel:+380978024062" class="callUs"><img src="img/icons/phone-call.png" alt="phone"></a>
 </body>
 </html>
