--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
 
         <nav>
-            <a class="navLink" href="#about">Про нас</a>
-            <a class="navLink" href="#catalog">Каталог товарів</a>
-            <a class="navLink" href="#doc">Документи</a>
-            <a class="navLink" href="#contact">Контакти</a>
+            <a class="navLink1" href="#about">Про нас</a>
+            <a class="navLink2" href="#catalog">Каталог товарів</a>
+            <a class="navLink3" href="#doc">Документи</a>
+            <a class="navLink4" href="#contact">Контакти</a>
 
         </nav>
         </div>
