--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <div class="documentWrite">
                     <h2 id="about">Про нас</h2>
             <div class="documentWriteAbout">
-                <p>
+                <p class="doc">
                     Виробництво склопластикової композитної арматури – один із основних напрямків діяльності підприємства "Буд-Надра".
                 Така продукція з'явилася на будівельному ринку понад 10 років і вже встигла набути популярності.
                 Вона може стати чудовою альтернативою металевим виробам.
                 Купити композитну арматуру на вигідних умовах ми пропонуємо дрібним, середнім та великим оптом.
                     Завжди є широкий асортимент продукції, яка відповідає усім вимогам та має сертифікат якості
                 </p>
-                <p>
-                    Композитна арматура (неметалева склопластикова) – будівельний матеріал, що має унікальні технічні характеристики.
+                <p class="aboutDoc">
+                    <b>Композитна арматура (неметалева склопластикова)</b> – будівельний матеріал, що має унікальні технічні характеристики.
                     Така арматура легка, міцна і надійна, має високу корозійну стійкість. Використання композитної склопластикової
                     арматури збільшує термін придатності конструкцій в 2-3 рази порівняно з використанням металевої арматури, особливо
                     якщо конструкції перебувають в агресивному середовищі і регулярно руйнуються лугами, солями, кислотами.</p>
