--- a/index.html
+++ b/index.html
@@ -188,6 +188,6 @@
     <div class="foot"></div>
 </footer>
 <a href="#" class="back_to_top"></a>
-<a href="tel:+380978024062" class="callUs"><img src="img/icons/phone-call.png" alt="phone"></a>
+<a href="tel:+380978024062" class="callUs"><img src="img/icons/phone.png" alt="phone"></a>
 </body>
 </html>
