--- a/index.html
+++ b/index.html
@@ -18,16 +18,22 @@
                 <img src="img/logo.jpg" alt="logo">
                 <h1>ТОВ БУД-НАДРА</h1>
             </div>
+            <div class="header_contact">
+                <a href="tel:+380978024062"> +38(097)802-40-62</a>
+                <a href="mailto:budnadra2020@gmail.com">budnadra2020@gmail.com</a>
+                <a href="mailto:budnadra2020@ukr.net">budnadra2020@ukr.net</a>
+            </div>
 
-        <nav>
-            <a class="navLink1" href="#about">Про нас</a>
-            <a class="navLink2" href="#catalog">Каталог товарів</a>
-            <a class="navLink3" href="#doc">Документи</a>
-            <a class="navLink4" href="#contact">Контакти</a>
-
-        </nav>
         </div>
     </div>
+    <nav>
+        <a class="navLink" href="#about"><b>Про нас</b></a>
+        <a class="navLink" href="#info"><b>Загальна інформація</b></a>
+        <a class="navLink" href="#catalog"><b>Каталог товарів</b></a>
+        <a class="navLink" href="#doc"><b>Документи</b></a>
+        <a class="navLink" href="#contact"><b>Контакти</b></a>
+
+    </nav>
 </header>
 <div class="intro">
 
@@ -40,14 +46,30 @@
     <div class="documents">
         <div class="documentWrite">
                     <h2 id="about">Про нас</h2>
-            <div class="documentWriteAbout">
+            <div class="aboutUs">
                 <p >
-                    Виробництво склопластикової композитної арматури – один із основних напрямків діяльності підприємства "Буд-Надра".
-                Така продукція з'явилася на будівельному ринку понад 10 років і вже встигла набути популярності.
-                Вона може стати чудовою альтернативою металевим виробам.
-                Купити композитну арматуру на вигідних умовах ми пропонуємо дрібним, середнім та великим оптом.
+                   <b>Виробництво склопластикової композитної арматури </b> – один із основних напрямків діяльності підприємства "Буд-Надра".
+                    Така продукція з'явилася на будівельному ринку понад 10 років і вже встигла набути популярності.
+                    Вона може стати чудовою альтернативою металевим виробам.
+                    <b>Наша мета -</b>  якісне постачання та виробництво неметалевої арматури для зручності, якості та довговічності
+                    ваших будівельних конструкцій.
+                    <b>Наші працівники</b> - проконсультують щодо наявної продукції, запропонують найкращий варіант серед високоякісних товарів,
+                    який підійде саме Вам!
+                    Купити композитну арматуру на вигідних умовах ми пропонуємо дрібним, середнім та великим оптом.
                     Завжди є широкий асортимент продукції, яка відповідає усім вимогам та має сертифікат якості
                 </p>
+                <p>
+                    <b>Наші переваги:</b>
+                    <p>* якість</p>
+                    <p>* доступність</p>
+                    <p>* надійність</p>
+                    <p>* широкий вибір продукції</p>
+
+                </p>
+            </div>
+                    <h2 id="info">Загальна інформація</h2>
+            <div class="documentWriteAbout">
+
                 <p class="aboutDoc">
                     <b>   Композитна арматура (неметалева склопластикова)</b> – будівельний матеріал, що має унікальні технічні характеристики.
                     Така арматура легка, міцна і надійна, має високу корозійну стійкість. Використання композитної склопластикової
@@ -177,7 +199,12 @@
 
         </div>
         <div class="contactIn" >
-            <b>Наша адреса: </b> с.Пасіки-Зубрицькі, вул. Дорожна 44
+            <div><b>Наша адреса: </b> с.Пасіки-Зубрицькі, вул. Дорожна 44</div>
+            <div class="timeWork"> <b>Графік роботи:</b>
+                <p>Понеділок - п'ятниця : з 08:00 - до 18:00</p>
+                <p>Субота, неділя - вихідні</div></p>
+
+
         </div>
         <div class="card"> <iframe src= https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1821.693086394277!2d24.08880993886711!3d49.78111763936454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1644813674858!5m2!1suk!2sua" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
