--- a/index.html
+++ b/index.html
@@ -27,11 +27,24 @@
         </div>
     </div>
     <nav>
+
         <a class="navLink" href="#about"><b>Про нас</b></a>
         <a class="navLink" href="#info"><b>Загальна інформація</b></a>
         <a class="navLink" href="#catalog"><b>Каталог товарів</b></a>
         <a class="navLink" href="#doc"><b>Документи</b></a>
         <a class="navLink" href="#contact"><b>Контакти</b></a>
+
+        <div class="buttonGroup">
+            <button class="mobiButton"><img src="img/icons/1490793867-user-interface03_82331.png" alt="menu"></button>
+            <div class="mobiLink" >
+                <a class="navLink" href="#about"><b>Про нас</b></a>
+                <a class="navLink" href="#info"><b>Загальна інформація</b></a>
+                <a class="navLink" href="#catalog"><b>Каталог товарів</b></a>
+                <a class="navLink" href="#doc"><b>Документи</b></a>
+                <a class="navLink" href="#contact"><b>Контакти</b></a>
+            </div>
+        </div>
+
 
     </nav>
 </header>
