--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="navLink" href="#contact"><b>Контакти</b></a>
 
         <div class="buttonGroup">
-            <button class="mobiButton"><img src="img/icons/1490793867-user-interface03_82331.png" alt="menu"></button>
+            <button class="mobiButton">МЕНЮ</button>
             <div class="mobiLink" >
                 <a class="navLink" href="#about"><b>Про нас</b></a>
                 <a class="navLink" href="#info"><b>Загальна інформація</b></a>
