--- a/index.html
+++ b/index.html
@@ -79,9 +79,24 @@
                     <p>* широкий вибір продукції</p>
 
                 </p>
+                <div class="photoAboutUs">
+
+                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-631.jpg" alt="photo2"></div>
+                    <div><img src="img/photo/PHOTO-2022-04-04-13-21-55.jpg" alt="photo1"></div>
+                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-584.jpg" alt="photo3"></div>
+                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-666.jpg" alt="photo5"></div>
+                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-455.jpg" alt="photo4"></div>
+                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-512.jpg" alt="photo6"></div>
+                </div>
+                <div class="videoAboutUs">
+                    <div><video src="img/video/0-02-05-3c4688866b7faa84e18eec19c8484f8adcf25126f7c6340d312473c90ebd029f_3f2bc8157c74c87e.mp4"controls></video> </div>
+                    <div><video src="img/video/0-02-05-091e645de7973879b181a9b8e17699c5b15f48e94eb9009dd8c5776cca8e526e_1b9cddcbb50a474b.mp4"controls></video> </div>
+                    <div><video src="img/video/0-02-05-463ff77e318c3abc126e6de77303a9d4867a1467d6cb652241cd7166c3ef4096_ca3da8fa1999a93.mp4"controls></video> </div>
+
+                </div>
             </div>
                     <h2 id="info">Загальна інформація</h2>
-            <div class="documentWriteAbout">
+            <div class="documentWriteAbout" >
 
                 <p class="aboutDoc">
                     <b>   Композитна арматура (неметалева склопластикова)</b> – будівельний матеріал, що має унікальні технічні характеристики.
@@ -123,72 +138,77 @@
                 </tr>
                 <tr>
                     <td>4мм</td>
-                    <td>4,75</td>
-                    <td>4,40</td>
-                    <td>4,21</td>
+                    <td>5,00</td>
+                    <td>4,80</td>
+                    <td>4,65</td>
                 </tr>
                 <tr>
                     <td>6мм</td>
-                    <td>8,15</td>
-                    <td>7,60</td>
-                    <td>7,30</td>
+                    <td>9,00</td>
+                    <td>8,50</td>
+                    <td>8,30</td>
                 </tr>
                 <tr>
                     <td>7мм</td>
-                    <td>12,50</td>
-                    <td>11,60</td>
-                    <td>11,30</td>
+                    <td>13,50</td>
+                    <td>13,00</td>
+                    <td>12,70</td>
                 </tr>
                 <tr>
                     <td>8мм</td>
-                    <td>17,90</td>
-                    <td>16,80</td>
-                    <td>16,15</td>
+                    <td>19,00</td>
+                    <td>18,00</td>
+                    <td>17,20</td>
                 </tr>
                 <tr>
                     <td>10мм</td>
-                    <td>23,60</td>
-                    <td>22,25</td>
-                    <td>21,30</td>
+                    <td>24,90</td>
+                    <td>24,00</td>
+                    <td>23,80</td>
                 </tr>
                 <tr>
                     <td>12мм</td>
-                    <td>36,90</td>
-                    <td>34,75</td>
-                    <td>35,25</td>
+                    <td>38,50</td>
+                    <td>37,00</td>
+                    <td>35,50</td>
                 </tr>
                 <tr>
                     <td>14мм</td>
-                    <td>49,90</td>
-                    <td>46,80</td>
-                    <td>44,90</td>
+                    <td>52,50</td>
+                    <td>50,00</td>
+                    <td>48,80</td>
                 </tr>
                 <tr>
                     <td>16мм</td>
-                    <td>60,85</td>
-                    <td>57,05</td>
-                    <td>54,85</td>
+                    <td>63,00</td>
+                    <td>60,00</td>
+                    <td>58,50</td>
                 </tr>
                 <tr>
                     <td>18мм</td>
-                    <td>74,25</td>
-                    <td>Договірна</td>
-                    <td>Договірна</td>
+                    <td>76,00</td>
+                    <td>74,00</td>
+                    <td>72,70</td>
                 </tr>
                 <tr>
                     <td>20мм</td>
-                    <td>95,15</td>
-                    <td>Договірна</td>
-                    <td>Договірна</td>
+                    <td>99,00</td>
+                    <td>95,00</td>
+                    <td>94,10</td>
                 </tr>
             </table>
         </div>
                 <h2  id="doc">Документи</h2>
         <div class="documentList">
-            <div><img src="img/doc/зображення_viber_2022-02-07_09-45-36-623.jpg" alt="doc1"></div>
-            <div><img src="img/doc/зображення_viber_2022-02-07_09-45-36-918.jpg" alt="doc2"></div>
-            <div><img src="img/doc/зображення_viber_2022-02-07_09-45-37-270.jpg" alt="doc3"></div>
-            <div><img src="img/doc/зображення_viber_2022-02-07_09-45-37-539.jpg" alt="doc4"></div>
+            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-949.jpg" alt="doc1"></div>
+            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-706.jpg" alt="doc2"></div>
+            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-486.jpg" alt="doc3"></div>
+            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-263.jpg" alt="doc4"></div>
+
+        </div>
+        <div class="documentList2">
+            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-026.jpg" alt="doc5"></div>
+            <div><img src="img/doc/зображення_viber_2022-04-04_15-23-59-702.jpg" alt="doc6"></div>
 
         </div>
     </div>
