--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="main.js">
+
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="adaptive.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Montserrat:ital@1&display=swap"
-
           rel="stylesheet">
-    <title>BUD-NADRA</title>
+
+
+
+   <title>BUD-NADRA</title>
 </head>
 <body>
 <header class="header">
@@ -20,6 +22,7 @@
             </div>
             <div class="header_contact">
                 <a href="tel:+380978024062"> +38(097)802-40-62</a>
+                <a href="tel: +380677143563"> +38(067)714-35-63 </a>
                 <a href="mailto:budnadra2020@gmail.com">budnadra2020@gmail.com</a>
                 <a href="mailto:budnadra2020@ukr.net">budnadra2020@ukr.net</a>
             </div>
@@ -78,20 +81,38 @@
                     <p>* надійність</p>
                     <p>* широкий вибір продукції</p>
 
-                </p>
                 <div class="photoAboutUs">
+                    <div class="sliderContainer">
+                        <div class="sliderTrack">
 
-                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-631.jpg" alt="photo2"></div>
-                    <div><img src="img/photo/PHOTO-2022-04-04-13-21-55.jpg" alt="photo1"></div>
-                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-584.jpg" alt="photo3"></div>
-                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-666.jpg" alt="photo5"></div>
-                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-455.jpg" alt="photo4"></div>
-                    <div><img src="img/photo/зображення_viber_2022-04-04_14-44-38-512.jpg" alt="photo6"></div>
+
+                            <img src="img/photo/PHOTO-2022-04-04-13-21-55.jpg" alt="">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-455.jpg" alt="">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-512.jpg" alt="">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-584.jpg" alt="">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-631.jpg" alt="">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-666.jpg" alt="">
+                            <img src="img/photo/зображення_viber_2022-04-05_14-33-09-086.jpg" alt="">
+
+                        </div>
+
+                    </div>
+                    <div class="sliderButton">
+                        <button class="btnPrev">Попередня</button>
+                        <button class="btnNext">Наступна</button>
+                    </div>
+
                 </div>
                 <div class="videoAboutUs">
-                    <div><video src="img/video/0-02-05-3c4688866b7faa84e18eec19c8484f8adcf25126f7c6340d312473c90ebd029f_3f2bc8157c74c87e.mp4"controls></video> </div>
-                    <div><video src="img/video/0-02-05-091e645de7973879b181a9b8e17699c5b15f48e94eb9009dd8c5776cca8e526e_1b9cddcbb50a474b.mp4"controls></video> </div>
-                    <div><video src="img/video/0-02-05-463ff77e318c3abc126e6de77303a9d4867a1467d6cb652241cd7166c3ef4096_ca3da8fa1999a93.mp4"controls></video> </div>
+                    <div class="video1">
+                        <div><video src="img/video/0-02-05-3c4688866b7faa84e18eec19c8484f8adcf25126f7c6340d312473c90ebd029f_3f2bc8157c74c87e.mp4" controls></video> </div>
+                        <div><video src="img/video/0-02-05-091e645de7973879b181a9b8e17699c5b15f48e94eb9009dd8c5776cca8e526e_1b9cddcbb50a474b.mp4" controls></video> </div>
+                    </div>
+                    <div class="video2">
+                        <div><video src="img/video/0-02-05-463ff77e318c3abc126e6de77303a9d4867a1467d6cb652241cd7166c3ef4096_ca3da8fa1999a93.mp4" controls></video> </div>
+                        <div><video src="img/video/0-02-05-6ed525f18e47e853264d212f080b17926086028f4d5668deb4e06a2327352cbd_de448597cc7cca91.mp4" controls></video> </div>
+                    </div>
+
 
                 </div>
             </div>
@@ -131,70 +152,103 @@
         <div class="table">
             <table>
                 <tr>
-                    <th>Діаметр</th>
-                    <th>Вартість,грн з ПДВ</th>
-                    <th>Вартість від 5000 м, грн з ПДВ</th>
-                    <th>Вартість від 18000 м, грн з ПДВ</th>
+                    <th>Зовнішній діаметр, мм</th>
+                    <th>Ціна за 1 м.п, грн</th>
+                    <th>Вага 1 м.п , кг</th>
+                    <th>Кількість м.п. в 1 тоні</th>
+                    <th>Умовна заміна арматури по фізико-механічних властивостях</th>
+                    <th>Вага 1 м.п. металевої арматури, кг</th>
+                    <th>Кількість м.п. в 1 тоні металевої арматури</th>
                 </tr>
                 <tr>
-                    <td>4мм</td>
-                    <td>5,00</td>
-                    <td>4,80</td>
-                    <td>4,65</td>
+                    <td>АКС 4</td>
+                    <td>4,35</td>
+                    <td>0,02</td>
+                    <td>50000</td>
+                    <td>АКС 4 - 6 А мет</td>
+                    <td>0,222</td>
+                    <td>4504,5</td>
                 </tr>
                 <tr>
-                    <td>6мм</td>
-                    <td>9,00</td>
-                    <td>8,50</td>
-                    <td>8,30</td>
+                    <td>АКС 6</td>
+                    <td>7,60</td>
+                    <td>0,05 </td>
+                    <td>20000</td>
+                    <td>АКС 6 - 8 А мет</td>
+                    <td>0,395</td>
+                    <td>2531,65</td>
                 </tr>
                 <tr>
-                    <td>7мм</td>
-                    <td>13,50</td>
-                    <td>13,00</td>
-                    <td>12,70</td>
+                    <td>АКС 7</td>
+                    <td>11,35</td>
+                    <td>0,07</td>
+                    <td>14300</td>
+                    <td>АКС 7 - 10 А мет</td>
+                    <td>0,617</td>
+                    <td>1620,7</td>
                 </tr>
                 <tr>
-                    <td>8мм</td>
-                    <td>19,00</td>
-                    <td>18,00</td>
-                    <td>17,20</td>
+                    <td>АКС 8</td>
+                    <td>16,15</td>
+                    <td>0,08</td>
+                    <td>12500</td>
+                    <td>АКС 8 - 12 А мет</td>
+                    <td>0,888</td>
+                    <td>1126,1</td>
                 </tr>
                 <tr>
-                    <td>10мм</td>
-                    <td>24,90</td>
-                    <td>24,00</td>
-                    <td>23,80</td>
+                    <td>АКС 10</td>
+                    <td>22,95</td>
+                    <td>0,12</td>
+                    <td>8350</td>
+                    <td>АКС 10 - 14 А мет</td>
+                    <td>1,210</td>
+                    <td>826,45</td>
                 </tr>
                 <tr>
-                    <td>12мм</td>
-                    <td>38,50</td>
-                    <td>37,00</td>
-                    <td>35,50</td>
+                    <td>АКС 12</td>
+                    <td>30,95</td>
+                    <td>0,2</td>
+                    <td>5000</td>
+                    <td>АКС 12 - 16 А мет</td>
+                    <td>1,580</td>
+                    <td>632,91</td>
                 </tr>
                 <tr>
-                    <td>14мм</td>
-                    <td>52,50</td>
-                    <td>50,00</td>
-                    <td>48,80</td>
+                    <td>АКС 14</td>
+                    <td>44,75</td>
+                    <td>0,26</td>
+                    <td>3850</td>
+                    <td>АКС 14 - 18 А мет</td>
+                    <td>2,000</td>
+                    <td>500</td>
                 </tr>
                 <tr>
-                    <td>16мм</td>
-                    <td>63,00</td>
-                    <td>60,00</td>
-                    <td>58,50</td>
+                    <td>АКС 16</td>
+                    <td>54,85</td>
+                    <td>0,35</td>
+                    <td>2680</td>
+                    <td>АКС 16 - 20 А мет</td>
+                    <td>2,470</td>
+                    <td>404,86</td>
                 </tr>
                 <tr>
-                    <td>18мм</td>
-                    <td>76,00</td>
-                    <td>74,00</td>
-                    <td>72,70</td>
+                    <td>АКС 18</td>
+                    <td>73,10</td>
+                    <td>0,44</td>
+                    <td>3195</td>
+                    <td>АКС 18 - 22 А мет</td>
+                    <td>2,980</td>
+                    <td>335,7</td>
                 </tr>
                 <tr>
-                    <td>20мм</td>
-                    <td>99,00</td>
-                    <td>95,00</td>
-                    <td>94,10</td>
+                    <td>АКС 20</td>
+                    <td>93,15</td>
+                    <td>0,54</td>
+                    <td>2833</td>
+                    <td>АКС 20 - 25 А мет</td>
+                    <td>3,850</td>
+                    <td>259,7</td>
                 </tr>
             </table>
         </div>
@@ -228,14 +282,19 @@
             </p>
         <p>
             <a href="tel:+380978024062"> +38(097)802-40-62</a>
+
+
         </p>
+            <p>
+                <a href="tel:+380677143563"> +38(067)714-35-63</a>
+            </p>
 
         </div>
         <div class="contactIn" >
             <div><b>Наша адреса: </b> с.Пасіки-Зубрицькі, вул. Дорожна 44</div>
             <div class="timeWork"> <b>Графік роботи:</b>
                 <p>Понеділок - п'ятниця : з 08:00 - до 18:00</p>
-                <p>Субота, неділя - вихідні</div></p>
+                <p>Субота, неділя - вихідні</div>
 
 
         </div>
@@ -249,5 +308,11 @@
 </footer>
 <a href="#" class="back_to_top"></a>
 <a href="tel:+380978024062" class="callUs"><img src="img/icons/phone.png" alt="phone"></a>
+
+
+
+
+<script src="js/main.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
