--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                         <div class="sliderTrack">
 
 
-                            <img src="img/photo/PHOTO-2022-04-04-13-21-55.jpg" alt="">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-455.jpg" alt="">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-512.jpg" alt="">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-584.jpg" alt="">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-631.jpg" alt="">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-666.jpg" alt="">
-                            <img src="img/photo/зображення_viber_2022-04-05_14-33-09-086.jpg" alt="">
+                            <img src="img/photo/PHOTO-2022-04-04-13-21-55.jpg" alt="1">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-455.jpg" alt="2">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-512.jpg" alt="3">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-584.jpg" alt="4">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-631.jpg" alt="5">
+                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-666.jpg" alt="6">
+                            <img src="img/photo/зображення_viber_2022-04-05_14-33-09-086.jpg" alt="7">
 
                         </div>
 
