--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                         <div class="sliderTrack">
 
 
-                            <img src="img/photo/PHOTO-2022-04-04-13-21-55.jpg" alt="1">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-455.jpg" alt="2">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-512.jpg" alt="3">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-584.jpg" alt="4">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-631.jpg" alt="5">
-                            <img src="img/photo/зображення_viber_2022-04-04_14-44-38-666.jpg" alt="6">
-                            <img src="img/photo/зображення_viber_2022-04-05_14-33-09-086.jpg" alt="7">
+                            <img src="img/photo/product_photo_1.jpg" alt="1">
+                            <img src="img/photo/product_photo_2.jpg" alt="2">
+                            <img src="img/photo/product_photo_4.jpg" alt="3">
+                            <img src="img/photo/product_photo_5.jpg" alt="4">
+                            <img src="img/photo/product_photo_6.jpg" alt="5">
+                            <img src="img/photo/product_photo_7.jpg" alt="6">
+                            <img src="img/photo/product_photo_8.jpg" alt="7">
 
                         </div>
 
@@ -105,12 +105,12 @@
                 </div>
                 <div class="videoAboutUs">
                     <div class="video1">
-                        <div><video src="img/video/0-02-05-3c4688866b7faa84e18eec19c8484f8adcf25126f7c6340d312473c90ebd029f_3f2bc8157c74c87e.mp4" controls></video> </div>
-                        <div><video src="img/video/0-02-05-091e645de7973879b181a9b8e17699c5b15f48e94eb9009dd8c5776cca8e526e_1b9cddcbb50a474b.mp4" controls></video> </div>
+                        <div><video src="img/video/video_1.mp4" controls></video> </div>
+                        <div><video src="img/video/video_3.mp4" controls></video> </div>
                     </div>
                     <div class="video2">
-                        <div><video src="img/video/0-02-05-463ff77e318c3abc126e6de77303a9d4867a1467d6cb652241cd7166c3ef4096_ca3da8fa1999a93.mp4" controls></video> </div>
-                        <div><video src="img/video/0-02-05-6ed525f18e47e853264d212f080b17926086028f4d5668deb4e06a2327352cbd_de448597cc7cca91.mp4" controls></video> </div>
+                        <div><video src="img/video/video_4.mp4" controls></video> </div>
+                        <div><video src="img/video/video_2.mp4" controls></video> </div>
                     </div>
 
 
@@ -254,15 +254,15 @@
         </div>
                 <h2  id="doc">Документи</h2>
         <div class="documentList">
-            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-949.jpg" alt="doc1"></div>
-            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-706.jpg" alt="doc2"></div>
-            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-486.jpg" alt="doc3"></div>
-            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-263.jpg" alt="doc4"></div>
+            <div><img src="img/doc/doc_photo_6.jpg" alt="doc1"></div>
+            <div><img src="img/doc/doc_photo_5.jpg" alt="doc2"></div>
+            <div><img src="img/doc/doc_photo_4.jpg" alt="doc3"></div>
+            <div><img src="img/doc/doc_photo_3.jpg" alt="doc4"></div>
 
         </div>
         <div class="documentList2">
-            <div><img src="img/doc/зображення_viber_2022-04-04_15-24-00-026.jpg" alt="doc5"></div>
-            <div><img src="img/doc/зображення_viber_2022-04-04_15-23-59-702.jpg" alt="doc6"></div>
+            <div><img src="img/doc/doc_photo_2.jpg" alt="doc5"></div>
+            <div><img src="img/doc/doc_photo_1.jpg" alt="doc6"></div>
 
         </div>
     </div>
