--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="header_contact">
                 <a href="tel:+380978024062"> +38(097)802-40-62</a>
                 <a href="tel: +380677143563"> +38(067)714-35-63 </a>
+                <a href="tel:+380962868687"> +38(096)286-86-87</a>
                 <a href="mailto:budnadra2020@gmail.com">budnadra2020@gmail.com</a>
                 <a href="mailto:budnadra2020@ukr.net">budnadra2020@ukr.net</a>
             </div>
@@ -287,6 +288,9 @@
         </p>
             <p>
                 <a href="tel:+380677143563"> +38(067)714-35-63</a>
+            </p>
+            <p>
+                <a href="tel:+380962868687"> +38(096)286-86-87</a>
             </p>
 
         </div>
