--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Montserrat:ital@1&display=swap"
           rel="stylesheet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B8S2LP32HE"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-B8S2LP32HE');
+    </script>
 
 
    <title>BUD-NADRA</title>
